# master_thesis

./: .gitignore  README.md  app.py  clicking_demo.ipynb  clicking_demo.py  config.yml  demo.py  gradio_app.py  hci.md  init_script.sh  justfile  main.py  pipeline.py  pyproject.toml  ui_demo.py  workspace.toml
bases/clicking/api/: __init__.py  cache_macro.py  core.py  exceptions.py
bases/clicking/chat_gui/: __init__.py  core.py  macos_clicking.py
bases/clicking/demo_client/: __init__.py
bases/clicking/gradio_app/: __init__.py  core.py
bases/clicking/server/: __init__.py  core.py
clicker/: __init__.py  core.py
clicking_client/: client.py  sam_dataset_annotation.py
components/clicking/auto_annotation/: __init__.py
components/clicking/common/: __init__.py  bbox.py  caching.py  data_structures.py  image_utils.py  logging.py  mask.py  pipeline_state.py  types.py
components/clicking/dataset_creator/: __init__.py  core.py  types.py
components/clicking/emulator_interface/: __init__.py  core.py  iphone_mirror.py  macos_clicking.py  ryujinx.py
components/clicking/evaluator/: __init__.py  core.py
components/clicking/image_processor/: __init__.py  base_processor.py  localization.py  ocr.py  pointing.py  segmentation.py  segmentation_text.py  utils.py  visualization.py
components/clicking/instruction_to_label/: __init__.py  core.py
components/clicking/localization/: __init__.py  core.py  model.py
components/clicking/output_corrector/: __init__.py  core.py  utils.py
components/clicking/pipeline/: __init__.py  core.py
components/clicking/pipelines/: __init__.py  molmo_direct.py  pipeline_wrapper.py
components/clicking/prompt_manager/: Interactive-1.interactive  __init__.py  core.py
components/clicking/prompt_refinement/: __init__.py  core.py  data_structures.py  types.py
components/clicking/ryujinx_interface/: __init__.py  core.py
components/clicking/segmentation/: __init__.py  core.py  sam2.py  utils.py
components/clicking/vision_model/: __init__.py  bbox.py  core.py  data_structures.py  evf_sam2.py  florence2.py  mask.py  molmo.py  sam2.py  types.py  utils.py  visualization.py
components/clicking/visualization/: __init__.py  core.py
configs/: openapi_generator_config.json
datasets/: gameplay_images.ipynb  gameplay_images_dataset.ipynb  manually_collected.ipynb  test.ipynb
datasets/game_dataset/: gameplay_images.ipynb
datasets/label-studio-scripts/: generate_interface_definitions.py
datasets/label_studio_gen/: Project 1 at 2024-07-0.json  Project 1 at 2024-07-03.json
datasets/scripts/: gcp_bucket_test.py  img_download.js
development/: clicking_demo.py  pipeline_devel.py  ui_demo.py
development/clicking_client/: client.py  client_new.py  sam_dataset_annotation.py
development/clicking_server/: .gitignore  Dockerfile  README.md  init.sh  main.py  new_masks_output.json  requirements.txt  sam2_script.py
development/clicking_server/demos/: sam2_auto_mask_generator.py  sam2_florence_chain.py
development/clicking_server/model_utils/:  __init__.py  florence.py  modes.py  visualization.py
development/datasets/: coco_dataset_creator.py  label_studio_demos.py  label_studio_file_read.py  manually_collected.py
development/demo_video/: overlay_opencv.py
development/game_control/: app.py  clicking_demo.py  game_control.py  multi_websocket_client_demo.py  new_cursor.py  websocket_client_without_app.py  window_capture.py
development/iphone_click/: clicking_demo.py
development/model_utils/: visualization.py
development/models/: corrector.py  florence2_demo.py  gpt4o-video.ipynb  gpt_models.py  litellm.py  molmo.py  molmo_hf.py  molmo_vllm.py  utils.py
development/pipelines/: annotation.py  annotation_config.yml  auto_annotator.py  benchmarking.py  config.yml  devel_evf_sam2.py  devel_florence2_grounded+sam2.py  devel_florence2_ow+sam2.py  direct_clickpoint_pipeline.py  evf_sam2.py  game_object_config.yml  game_object_pipeline.py  monopoly_config.yml  monopoly_pipeline.py  pipeline_wrapper_test.py  sam_dataset_annotation.py  ui_config.yml  ui_pipeline.py
development/prompts/: mario-odessey.md  predictor-corrector.md
development/scripts/: auto_annotator.py  instruction_to_label.py  output_corrector.py  prompt_management.py  segmentation_class.py
development/server_test/: streaming_client.py  streaming_server.py
development/vllm/: demo.py
development/waste/: pycocotools_demo.py  pydantic_fallback.py
evals/output_corrector/: ground_truth.json  validity_results.json
game_control/: __init__.py  bidir_websocket_client_demo.py  demo.py  game_control.py  game_controller.py  httpstream_client_demo.py  mouse_keyboard.py  multi_websocket_client_demo.py  read_img_sequence.py  stream_read_demo.py  websocket_client_demo.py  websocket_client_without_app.py  websocket_read_demo.py  window_cap.py
model_server/: app.py  demo.py  main.py  server.py
model_server/models/: ___init__.py  __init__.py  clicking_model.py  florence2.py
model_utils/: __init__.py  visualization.py
models/: __init__.py  corrector.ipynb  corrector.py  florence2-inference.py  florence2.ipynb  florence2_coco.ipynb  florence2_coco.py  florence2_inference.py  gpt4o.py  gpt_models.py  grounding_dino.ipynb  llava1.6.ipynb  openai-gpt4o.py  sam2.py
notebooks/: automatic_mask_generator_example.ipynb
projects/clicking_server/: Dockerfile  README.md  justfile  pyproject.toml
projects/clicking_server/wheels/evf_sam2_cuda/: evf_sam-1.0-py3-none-any.whl
projects/clicking_server/wheels/sam2_cpu/: SAM_2-1.0-py3-none-any.whl
projects/clicking_server/wheels/sam2_cuda/: SAM_2-1.0-py3-none-any.whl
projects/ryujinx_controller/: pyproject.toml
prompts/: captain-toad.md  gpt4-0.md  instruction_refinement.prompt.md  mario-odessey.md  output_corrector.md  predictor-corrector.md  prompt_refinement.md  ui-dataset.md
test/prompts/: prompt_refiner.md
wheels/evf_sam2/: evf_sam-1.0-py3-none-any.whl
wheels/evf_sam2_cpu/: evf_sam-1.0-py3-none-any.whl
wheels/sam2_cpu/: SAM_2-1.0-py3-none-any.whl
wheels/sam2_cuda/: SAM_2-1.0-cp311-cp311-linux_x86_64.whl
(+36 files in other folders)
