[tool.poetry]
name = "clicking"
version = "0.1.0"
description = ""
authors = ["Sarath S Menon <sarathmenon.downey@gmail.com>"]
readme = "README.md"
# package-mode = false

packages = [
    { include = "clicking/api", from = "bases" },
    { include = "clicking/chat_gui", from = "bases" },
    { include = "clicking/gradio_app", from = "bases" },
    { include = "clicking/vision_model", from = "components" },
    { include = "clicking/output_corrector", from = "components" },
    { include = "clicking/pipeline", from = "components" },
    { include = "clicking/prompt_manager", from = "components" },
    { include = "clicking/prompt_refinement", from = "components" },
    { include = "clicking/dataset_creator", from = "components" },
    { include = "clicking/common", from = "components" },
]

[tool.poetry.dependencies]
python = "^3.10.12"
vllm = "^0.6.3.post1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
ipykernel = "^6.29.5"

# [tool.poetry.scripts]
# init = "sh init_script.sh"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
