[tool.poetry]
name = "clicking_server"
version = "0.1.0"
description = ""
authors = ["Sarath S Menon <sarathmenon.downey@gmail.com>"]
license = ""

packages = [
    { include = "clicking/api", from = "../../bases" },
    { include = "clicking/vision_model", from = "../../components" },
    { include = "clicking/output_corrector", from = "../../components" },
    { include = "clicking/pipeline", from = "../../components" },
    { include = "clicking/prompt_manager", from = "../../components" },
    { include = "clicking/prompt_refinement", from = "../../components" },
    { include = "clicking/dataset_creator", from = "../../components" },
    { include = "clicking/common", from = "../../components" },
]

[tool.poetry.dependencies]
python = "^3.10.12"
torch = "2.4.0"
torchvision = "0.19"
matplotlib = "^3.9.2"
transformers = "^4.45.2"
timm = "^1.0.8"
einops = "^0.8.0"
google-cloud-storage = "^2.18.2"
scipy = "^1.14.0"
pycocotools = "^2.0.8"
fastapi = "^0.112.0"
uvicorn = "^0.30.6"
gradio = "^4.41.0"
openapi-python-client = "^0.21.2"
opencv-python = "^4.10.0.84"
gradio-log = "^0.0.4"
python-dotenv = "^1.0.1"
litellm = "^1.43.18"
promptdown = "^0.7.5"
accelerate = "^1.0.1"
huggingface-hub = {extras = ["hf-transfer"], version = "^0.25.1"}
setuptools = "^75.2.0"
wheel = "^0.44.0"
wandb = "^0.17.7"
tabulate = "^0.9.0"
prettytable = "^3.11.0"
evaluate = "^0.4.2"
scikit-learn = "^1.5.1"
pandas = "^2.2.2"
tenacity = "^9.0.0"
markdown = "^3.7"
bleach = "^6.1.0"
uvloop = "^0.20.0"
httptools = "^0.6.1"
vllm = "^0.6.3.post1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
